Add read-map tool

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "ladder": "node ./ladder/ladder.js"
+    "ladder": "node ./ladder/ladder.js",
+    "read-map": "node ./map/read.js"
+  },
+  "dependencies": {
+    "@node-sc2/proto": "^0.6.0-alpha.0"
   }
 }
