--- a/config.json
+++ b/config.json
@@ -2,7 +2,13 @@
   "path": "C:\\games\\StarCraft II",
   "version": "Base91115",
   "realtime": false,
-  "localMap": { "mapPath": "Oceanborn512V2AIE.SC2Map" },
+  "localMap": { "mapPath": "Equilibrium512V2AIE.SC2Map" },
+  "localMap1": { "mapPath": "Equilibrium512V2AIE.SC2Map" },
+  "localMap2": { "mapPath": "Goldenaura512V2AIE.SC2Map" },
+  "localMap3": { "mapPath": "Gresvan512V2AIE.SC2Map" },
+  "localMap4": { "mapPath": "HardLead512V2AIE.SC2Map" },
+  "localMap5": { "mapPath": "Oceanborn512V2AIE.SC2Map" },
+  "localMap6": { "mapPath": "SiteDelta512V2AIE.SC2Map" },
   "playerSetup": [
     { "type": 1, "race": 3 },
     { "type": 2, "race": 4, "difficulty": 1 }
