Update map tool with maps version 513

--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "path": "C:\\games\\StarCraft II",
   "version": "Base91115",
   "realtime": false,
-  "localMap": { "mapPath": "Equilibrium512V2AIE.SC2Map" },
-  "localMap1": { "mapPath": "Equilibrium512V2AIE.SC2Map", "side1": { "x": 46.5, "y": 119.5 }, "side2": { "x": 177.5, "y": 119.5 } },
-  "localMap2": { "mapPath": "Goldenaura512V2AIE.SC2Map", "side1": { "x": 69.5, "y": 168.5 }, "side2": { "x": 170.5, "y": 67.5 } },
-  "localMap3": { "mapPath": "Gresvan512V2AIE.SC2Map", "side1": { "x": 38.5, "y": 121.5 }, "side2": { "x": 161.5, "y": 42.5 } },
-  "localMap4": { "mapPath": "HardLead512V2AIE.SC2Map", "side1": { "x": 37.5, "y": 129.5 }, "side2": { "x": 130.5, "y": 34.5 } },
-  "localMap5": { "mapPath": "Oceanborn512V2AIE.SC2Map", "side1": { "x": 43.5, "y": 141.5 }, "side2": { "x": 156.5, "y": 46.5 } },
-  "localMap6": { "mapPath": "SiteDelta512V2AIE.SC2Map", "side1": { "x": 50.5, "y": 157.5 }, "side2": { "x": 149.5, "y": 42.5 } },
+  "localMap": { "mapPath": "Equilibrium513AIE.SC2Map" },
+  "localMap1": { "mapPath": "Equilibrium513AIE.SC2Map", "side1": { "x": 46.5, "y": 119.5 }, "side2": { "x": 177.5, "y": 119.5 } },
+  "localMap2": { "mapPath": "Goldenaura513AIE.SC2Map", "side1": { "x": 69.5, "y": 168.5 }, "side2": { "x": 170.5, "y": 67.5 } },
+  "localMap3": { "mapPath": "Gresvan513AIE.SC2Map", "side1": { "x": 38.5, "y": 121.5 }, "side2": { "x": 161.5, "y": 42.5 } },
+  "localMap4": { "mapPath": "HardLead513AIE.SC2Map", "side1": { "x": 37.5, "y": 129.5 }, "side2": { "x": 130.5, "y": 34.5 } },
+  "localMap5": { "mapPath": "Oceanborn513AIE.SC2Map", "side1": { "x": 43.5, "y": 141.5 }, "side2": { "x": 156.5, "y": 46.5 } },
+  "localMap6": { "mapPath": "SiteDelta513AIE.SC2Map", "side1": { "x": 50.5, "y": 157.5 }, "side2": { "x": 149.5, "y": 42.5 } },
   "playerSetup": [
     { "type": 1, "race": 3 },
     { "type": 2, "race": 4, "difficulty": 1 }
